[gd_scene load_steps=10 format=3 uid="uid://blde1q04y11lo"]

[ext_resource type="Texture2D" uid="uid://qmqqxgdwwjvw" path="res://images/Buttoning/build_base.png" id="1_a88fq"]
[ext_resource type="Texture2D" uid="uid://7ct1gd0f0cd1" path="res://images/Buttoning/build_base_selected.png" id="2_3im3s"]
[ext_resource type="Texture2D" uid="uid://cyjkjq0ex6jsg" path="res://images/Buttoning/build_base_hover.png" id="3_ipj5s"]
[ext_resource type="Texture2D" uid="uid://nvg0dymna5ic" path="res://images/Buttoning/build_base_down.png" id="4_dqlr6"]
[ext_resource type="Script" path="res://unique_scripts/kobold_build.gd" id="5_th51c"]
[ext_resource type="Texture2D" uid="uid://dq3r7foook0rh" path="res://images/UpgradeIcon/buildings/kobol2.png" id="6_7b1f4"]
[ext_resource type="PackedScene" uid="uid://6hdxhal6id8r" path="res://Scenes/debuffs/kobhunger_debuff.tscn" id="6_8wnrg"]
[ext_resource type="Texture2D" uid="uid://c7f1p3aevlu5a" path="res://images/bmenuicons/pat.png" id="7_tmaxn"]
[ext_resource type="AudioStream" uid="uid://cedcmjmiii7px" path="res://Audio/MenuTap.ogg" id="9_3yxpj"]

[node name="Kobold_build" type="TextureButton" groups=["Building", "Persist"]]
visible = false
custom_minimum_size = Vector2(704, 100)
texture_normal = ExtResource("1_a88fq")
texture_pressed = ExtResource("2_3im3s")
texture_hover = ExtResource("3_ipj5s")
texture_disabled = ExtResource("4_dqlr6")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_th51c")
title = "Kobolds"
description = "Yip yip yip yap..."
bcost = 2000
bpower = 11.0
modifier = 1.0
tier = 1
target_node = ExtResource("6_8wnrg")

[node name="I" type="Sprite2D" parent="."]
position = Vector2(68, 51)
scale = Vector2(0.325, 0.325)
texture = ExtResource("6_7b1f4")
flip_h = true
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Aupdate" type="Timer" parent="."]
autostart = true

[node name="Mealt" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Hungert" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="A" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 56.0
offset_right = 826.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
text = "1"
horizontal_alignment = 2

[node name="P" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 15.0
offset_right = 826.0
offset_bottom = 73.0
scale = Vector2(0.5, 0.5)
text = "+0.1 C/s"
horizontal_alignment = 2

[node name="Desc" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 10.0
offset_right = 719.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Kobold"
horizontal_alignment = 1

[node name="C" type="Label" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 52.0
offset_right = 438.0
offset_bottom = 134.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 54
text = "1.2"

[node name="cost" type="Sprite2D" parent="C"]
position = Vector2(-35, 40)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_tmaxn")

[node name="Tap" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_3yxpj")
pitch_scale = 1.5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Aupdate" to="." method="_autoupdate"]
[connection signal="timeout" from="Mealt" to="." method="_on_mealt_timeout"]
[connection signal="timeout" from="Hungert" to="." method="_on_hunger_timeout"]
